Fixed a link that didn't have target blank.

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <p>While I do love Full Stack <span style="color:rgb(97, 255, 70)">Web Development</span> and completing a project from the ground up. I equally, if not more, enjoy doing UX/UI Design in Adobe XD or Figma. If I was to pursue a career, it would most likely be UX/UI Designer. If you want to know more about me, you can read more below or we can have a chat!</p>
         </div>
         <div class="section-actions">
-            <a class="btn btn-outline blue-border hvr-bounce-to-right" href="#">View my Resume</a>
-            <a class="btn btn-outline pink-border hvr-bounce-to-right" href="https://m.me/TheBoyNamed">Let's Chat!</a>
+            <a target="_blank" class="btn btn-outline blue-border hvr-bounce-to-right" href="#">View my Resume</a>
+            <a target="_blank" class="btn btn-outline pink-border hvr-bounce-to-right" href="https://m.me/TheBoyNamed">Let's Chat!</a>
         </div>
     </section>
     <section id="projects" class="section">
