Added custom scrollbar

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Joseph Chua &lt;repeatercreeper&gt;</title>
 
-    <meta name="description" content="Personal Portfolio of Joseph Chua &lt;repeatercreeper&gt;. You can learn more about me by viewing this website!">
+    <meta name="description" content="Personal portfolio of Joseph Chua, also known as RepeaterCreeper. A full stack web developer and has a passion for UX/UI Design. You can learn more about me by viewing this website. All works that are for public are also displayed here.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:title" content="Joseph Chua &lt;repeatercreeper&gt;">
@@ -24,7 +24,6 @@
     <!-- Android -->
     <link rel="shortcut icon" sizes="192x192" href="/android-chrome-192x192.png">
     <link rel="shortcut icon" sizes="512x512" href="/android-chrome-512x512.png">
-
 
     <!-- iOS -->
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
