--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 <li><a class="nav-link" href="#contact">contact</a></li>
             </ul>
         </div>
-        <div style="display: flex; flex: 1; justify-content: center; align-items: center; flex-wrap: wrap;">
+        <div style="display: flex; flex: 1; justify-content: center; align-items: center; flex-wrap: wrap; gap: 16px;">
             <a target="_blank" href="https://facebook.com/TheBoyNamed" class="social-icon facebook"><i class="fab fa-facebook-f"></i></a>
             <a target="_blank" href="https://www.linkedin.com/in/RepeaterCreeper/" class="social-icon linkedin"><i class="fab fa-linkedin-in"></i></a>
             <a target="_blank" href="https://twitter.com/RepeaterCreeper" class="social-icon twitter"><i class="fab fa-twitter"></i></a>
