--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
         <path id="Subtraction_6" data-name="Subtraction 6" d="M380.5,330.5h-243a138.519,138.519,0,0,1-27.711-2.793,136.749,136.749,0,0,1-49.167-20.689,137.9,137.9,0,0,1-49.817-60.5,136.8,136.8,0,0,1-8.012-25.81,138.84,138.84,0,0,1,0-55.422,136.746,136.746,0,0,1,20.689-49.166,137.9,137.9,0,0,1,60.5-49.817,136.809,136.809,0,0,1,25.81-8.012A138.518,138.518,0,0,1,137.5,55.5h243v275Z" transform="translate(0 -55.5)" fill="url(#linear-gradient)"/>
     </svg>
     
+    <header style="display: none;">
+        <div style="display: flex; flex: 1; justify-content: center; align-items: center; flex-wrap: wrap; gap: 16px;">
+            <a target="_blank" href="https://facebook.com/TheBoyNamed" class="social-icon facebook"><i class="fab fa-facebook-f"></i></a>
+            <a target="_blank" href="https://www.linkedin.com/in/RepeaterCreeper/" class="social-icon linkedin"><i class="fab fa-linkedin-in"></i></a>
+            <a target="_blank" href="https://twitter.com/RepeaterCreeper" class="social-icon twitter"><i class="fab fa-twitter"></i></a>
+            <a target="_blank" href="https://www.github.com/RepeaterCreeper" class="social-icon github"><i class="fab fa-github"></i></a>
+            <a target="_blank" href="https://www.youtube.com/RepeaterCreeper" class="social-icon youtube"><i class="fab fa-youtube"></i></a>
+        </div>
+    </header>
+
     <header>
         <div class="logo">
             <img src="icon.png" alt="RepeaterCreeper's Logo" />
@@ -67,6 +77,7 @@
             </ul>
         </nav>
     </header>
+
     <section class="section hero" id="home">
         <div class="hero-content">
             <h1 class="title">Joseph Chua</h1>
@@ -294,10 +305,7 @@
         <div class="section-content">
             <div>
                 <h1>Let's talk!</h1>
-                <p>You can reach me through my social media accounts listed down below, or you can <a style="text-decoration: none; color: lightblue" href="mailto:repeatercreeper@gmail.com">email me</a> directly at <b>RepeaterCreeper@gmail.com</b>.</p>
-            </div>
-            <div>
-                <h1 style="text-align: center;">This section is work in progress.</h1>
+                <p>You can reach me through my social media accounts listed down below, or you can <a style="text-decoration: none; color: lightblue" href="mailto:repeatercreeper@gmail.com">email me</a> directly at <b>RepeaterCreeper@gmail.com</b> or call <a href="tel:+6309074909542">+63 907-490-9542</a></p>
             </div>
         </div>
     </section>
