--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <div class="section-content">
             <div>
                 <h1>Let's talk!</h1>
-                <p>You can reach me through my social media accounts listed down below, or you can <a style="text-decoration: none; color: lightblue" href="mailto:repeatercreeper@gmail.com">email me</a> directly at <b>RepeaterCreeper@gmail.com</b> or call <a href="tel:+6309074909542">+63 907-490-9542</a></p>
+                <p>Work In Progress</p>
             </div>
         </div>
     </section>
