--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="project-legend">
                 <div style="color: #F48EFF;"><span style="font-size: 1.5rem;">&#9632;</span> - Completed</div>
                 <div style="color: rgb(69, 197, 18);"><span style="font-size: 1.5rem;">&#9632;</span> - In Progress</div>
-                <div style="color: #fc4444;"><span style="font-size: 1.5rem;">&#9632;</span> - Discontinued / Abandoned</div>
+                <div style="color: #fc4444;"><span style="font-size: 1.5rem;">&#9632;</span> - Discontinued / On-Hold</div>
             </div>
             <div class="projects-list">
                 <div class="project-item completed">
