--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <h1 style="margin: 0; font-weight: 800">About Me</h1>
         </div>
         <div class="section-content">
-            <p>My name is Joseph Chua and I am <span id="age">20</span> years old. I am currently in my 2<sup>nd</sup> year studying <span style="color: rgb(97, 255, 70);">Computer Science</span> at Eastwoods Professional College of Science and Technology in the Philippines.</p>
+            <p>My name is Joseph Chua and I am <span id="age">21</span> years old. I am currently in my 3<sup>rd</sup> year studying <span style="color: rgb(97, 255, 70);">Computer Science</span> at Eastwoods Professional College of Science and Technology in the Philippines.</p>
             <p>While I do love Full Stack <span style="color:rgb(97, 255, 70)">Web Development</span> and completing a project from the ground up. I equally, if not more, enjoy doing UX/UI Design in Adobe XD or Figma. If I was to pursue a career, it would most likely be UX/UI Designer. If you want to know more about me, you can read more below or we can have a chat!</p>
         </div>
         <div class="section-actions">
