--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section class="section hero" id="home">
         <div class="hero-content">
             <h1 class="title">Joseph Chua</h1>
-            <p class="subtitle">a <span style="color: yellow;">Web Developer</span></p>
+            <p class="subtitle">a <span style="color: yellow;">Software Developer</span></p>
             <div style="margin-top: 32px;">
                 <a href="#projects" class="btn btn-outline blue-border hvr-bounce-to-right">My Work</a>
                 <a href="#contact" class="btn btn-outline orange-border hvr-bounce-to-right">Contact Me</a>
@@ -93,7 +93,7 @@
             <h1 style="margin: 0; font-weight: 800">About Me</h1>
         </div>
         <div class="section-content">
-            <p>My name is Joseph Chua and I am <span id="age">21</span> years old. I am currently in my 3<sup>rd</sup> year studying <span style="color: rgb(97, 255, 70);">Computer Science</span> at Eastwoods Professional College of Science and Technology in the Philippines.</p>
+            <p>My name is Joseph Chua and I am <span id="age">21</span> years old. I am currently a 3<sup>rd</sup> year studying <span style="color: rgb(97, 255, 70);">Computer Science</span> at Eastwoods Professional College of Science and Technology in the Philippines. I'm a Software Developer for <a href="https://pdcflow.com">PDCflow.</a></p>
             <p>While I do love Full Stack <span style="color:rgb(97, 255, 70)">Web Development</span> and completing a project from the ground up. I equally, if not more, enjoy doing UX/UI Design in Adobe XD or Figma. If I was to pursue a career, it would most likely be UX/UI Designer. If you want to know more about me, you can read more below or we can have a chat!</p>
         </div>
         <div class="section-actions">
@@ -291,9 +291,10 @@
                 </ul>
             </div>
             <div>
-                <h2>Life Achievements</h2>
+                <h2>Work Achievements</h2>
                 <ul>
                     <li><b>[2018 - 2019]</b> Worked for the first time at USPS REC as a Data Conversion Operator</li>
+                    <li><b>[2022 - present]</b> Working as a Software Developer at PDCflow.</li>
                 </ul>
             </div>
         </div>
