--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section class="section hero" id="home">
         <div class="hero-content">
             <h1 class="title">Joseph Chua</h1>
-            <p class="subtitle">a <span style="color: yellow;">Software Developer</span></p>
+            <p class="subtitle">a <span style="color: yellow;">Software Engineer</span></p>
             <div style="margin-top: 32px;">
                 <a href="#projects" class="btn btn-outline blue-border hvr-bounce-to-right">My Work</a>
                 <a href="#contact" class="btn btn-outline orange-border hvr-bounce-to-right">Contact Me</a>
@@ -93,7 +93,7 @@
             <h1 style="margin: 0; font-weight: 800">About Me</h1>
         </div>
         <div class="section-content">
-            <p>My name is Joseph Chua and I am <span id="age">21</span> years old. I am currently a 3<sup>rd</sup> year studying <span style="color: rgb(97, 255, 70);">Computer Science</span> at Eastwoods Professional College of Science and Technology in the Philippines. I'm a Software Developer for <a href="https://pdcflow.com">PDCflow.</a></p>
+            <p>My name is Joseph Chua and I am <span id="age">21</span> years old. I am currently a 3<sup>rd</sup> year studying <span style="color: rgb(97, 255, 70);">Computer Science</span> at Eastwoods Professional College of Science and Technology in the Philippines. I'm a Software Engineer for PDCflow</p>
             <p>While I do love Full Stack <span style="color:rgb(97, 255, 70)">Web Development</span> and completing a project from the ground up. I equally, if not more, enjoy doing UX/UI Design in Adobe XD or Figma. If I was to pursue a career, it would most likely be UX/UI Designer. If you want to know more about me, you can read more below or we can have a chat!</p>
         </div>
         <div class="section-actions">
@@ -294,7 +294,7 @@
                 <h2>Work Achievements</h2>
                 <ul>
                     <li><b>[2018 - 2019]</b> Worked for the first time at USPS REC as a Data Conversion Operator</li>
-                    <li><b>[2022 - present]</b> Working as a Software Developer at PDCflow.</li>
+                    <li><b>[2022 - present]</b> Working as a Software Engineer at PDCflow.</li>
                 </ul>
             </div>
         </div>
@@ -328,7 +328,6 @@
             </ul>
         </div>
         <div style="display: flex; flex: 1; justify-content: center; align-items: center; flex-wrap: wrap; gap: 16px;">
-            <a target="_blank" href="https://facebook.com/TheBoyNamed" class="social-icon facebook"><i class="fab fa-facebook-f"></i></a>
             <a target="_blank" href="https://www.linkedin.com/in/RepeaterCreeper/" class="social-icon linkedin"><i class="fab fa-linkedin-in"></i></a>
             <a target="_blank" href="https://twitter.com/RepeaterCreeper" class="social-icon twitter"><i class="fab fa-twitter"></i></a>
             <a target="_blank" href="https://www.github.com/RepeaterCreeper" class="social-icon github"><i class="fab fa-github"></i></a>
